--- a/src/outpost/django/mfa/templates/mfa/enrollment/form.html
+++ b/src/outpost/django/mfa/templates/mfa/enrollment/form.html
@@ -22,9 +22,7 @@
         </div>
       </div>
       <div class="col-md-8">
-        <div class="">
-          <video class="card-img-top" id="video">Video stream not available.</video>
-        </div>
+        <video style="width: 100%" id="video">Video stream not available.</video>
       </div>
     </div>
   <div class="card-body">
