--- a/src/outpost/django/mfa/templates/mfa/enrollment/form.html
+++ b/src/outpost/django/mfa/templates/mfa/enrollment/form.html
@@ -37,5 +37,5 @@
     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
   </div>
 </div>
-<canvas id="canvas" class="d-none"></canvas>
+<canvas id="canvas" class="d-none" style="display: none"></canvas>
 {% endblock %}
